added more domains + restructured packages + switched entities to classes, because JPA can't handle records
