# src/main/java/com/github/aloutta/gaming/catalog/developer/DeveloperController.java
@@ -1,9 +1,6 @@
-package com.github.aloutta.gaming.catalog.controller;
+package com.github.aloutta.gaming.catalog.developer;
 
 import com.github.aloutta.gaming.catalog.api.*;
-import com.github.aloutta.gaming.catalog.data.*;
-import com.github.aloutta.gaming.catalog.mapping.*;
-import com.github.aloutta.gaming.catalog.model.*;
 import com.github.aloutta.gaming.catalog.model.Developer;
 import io.micronaut.http.annotation.*;
 import jakarta.validation.*;
